--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Gestión de Tareas Avanzada</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!-- Agregar esta línea -->
 </head>
 <body>
     <div class="container">
