Mejoras de cronometro para tareas II

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <p>Total de tareas: <span id="total-tasks">0</span></p>
             <p>Completadas: <span id="completed-tasks">0</span></p>
             <p>Pendientes: <span id="pending-tasks">0</span></p>
+            <p>Tiempo total dedicado: <span id="total-time">00:00:00</span></p> <!-- Nueva línea para tiempo total -->
         </div>
 
         <!-- Cronómetro para seguimiento de tareas -->
@@ -65,6 +66,7 @@
             <p>🕒 Tiempo dedicado: <span id="task-timer">00:00:00</span></p>
             <button id="start-timer" aria-label="Iniciar cronómetro">Iniciar Cronómetro</button>
             <button id="pause-timer" aria-label="Pausar cronómetro">Pausar Cronómetro</button>
+            <button id="stop-timer" aria-label="Detener cronómetro">Detener Cronómetro</button> <!-- Nuevo botón para detener -->
             <button id="reset-timer" aria-label="Reiniciar cronómetro">Reiniciar Cronómetro</button>
             <button id="resume-timer" style="display: none;" aria-label="Reanudar cronómetro">Reanudar</button>
         </div>
